Dave's funky fixer for the mp profile pic overflow (see #165)

--- a/mzalendo/core/static/sass/desktop.scss
+++ b/mzalendo/core/static/sass/desktop.scss
@@ -358,7 +358,9 @@ josh [at] supercooldesign.co.uk
     overflow:hidden;
     img {
       width:auto;
-      height:210px;
+      height:auto;
+      max-width:210px;
+      max-height:210px;
     }
     #map_canvas {
       width:200px;
